# tetris_clone

./: Cargo.toml  README.md
.cargo/: config.toml
src/: board.rs  constants.rs  game.rs  main.rs  state.rs  tetromino.rs  types.rs  utils.rs  window.rs
src/components/: board.rs  mod.rs  tetromino.rs
src/modules/: board.rs  button.rs  cursor.rs  mod.rs  tetromino.rs
src/screens/: gameover.rs  ingame.rs  mainmenu.rs  mod.rs
src/state/: main_menu.rs  mod.rs
src/states/: game.rs  game_over.rs  main_menu.rs  mod.rs
